# glint

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.ps1  install.sh  prek.toml
.github/workflows/: release.yml
docs/: asset_deduplication.md  cleanup_targets.md  cli_design.md  cli_output.md  instance_structure.md  mod_duplicate_detection.md  modpack_cache_cleanup.md  parallel_scanning.md  prismlauncher_filesystem.md  project.md  rust_architecture.md  spinners.md  world_size_analyzer.md
scripts/: uninstall.ps1  uninstall.sh
src/: app.rs  cleaner.rs  cli.rs  config.rs  i18n.rs  main.rs  output.rs  prism.rs  scanner.rs
src/output/: pager.rs  summaries.rs
src/scanner/: scan.rs  unused.rs
